# miniGEMM

./: .gitignore  CMakeLists.txt  README.md  cublas_test  report1.nsys-rep  report1.sqlite  test_cublas.cu  test_v1.cu  test_v2.cu  test_v3.cu  v3
include/: gemm.h
src/: CMakeLists.txt  gemm_cpu.cpp  gemm_cuda.cu  gen_mats.cpp  main.cpp  reduce_cuda.cu
